--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oyster Agent Portal - Questions</title>
 <link rel="stylesheet" href="agent-style.css">
-<script src="../config.js"></script>
+<script src="config.js"></script>
 <script src="agent-script.js"></script>
 </head>
 <body>
